k8s/k8s-service-descriptor-template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobile-wiki
    env: ${env}
    team: iwing
  name: mobile-wiki-${env}
  namespace: prod
spec:
  ports:
  - protocol: TCP
    name: main
    port: 80
    targetPort: 8001
  - protocol: TCP
    name: admin
    port: 8003
    targetPort: 8007
  selector:
    app: mobile-wiki
    env: ${env}
    # wrapped with double quote (") to prevent issues with special characters in version name
    version: "${version}"
  type: ClusterIP
