k8s/k8s-deployment-descriptor-template-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # wrapped with double quote (") to prevent issues with special characters in version name
  name: "mobile-wiki-prod-${version}"
  namespace: prod
  labels:
    app: mobile-wiki
    env: prod
    # wrapped with double quote (") to prevent issues with special characters in version name
    version: "${version}"
    status: active
    team: iwing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mobile-wiki
      env: prod
      # wrapped with double quote (") to prevent issues with special characters in version name
      version: "${version}"
  template:
    metadata:
      labels:
        app: mobile-wiki
        env: prod
        # wrapped with double quote (") to prevent issues with special characters in version name
        version: "${version}"
        stage: mobile-wiki-prod
        team: iwing
    spec:
      serviceAccountName: k8s-pod
      containers:
      - name: mobile-wiki-prod
        image: ${image}
        livenessProbe:
          httpGet:
            path: /heartbeat
            port: 8001
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /heartbeat
            port: 8001
          periodSeconds: 5
        resources:
          requests:
            cpu: 1.0
            memory: 1.5Gi
          limits:
            cpu: 4.0
            memory: 2.5Gi
        ports:
        - containerPort: 8001
        - containerPort: 8007
        command: ["sh", "-c", "source /var/lib/secrets/export.env && exec npm run fastboot-server"]
        volumeMounts:
        - name: secrets-dir
          readOnly: true
          mountPath: /var/lib/secrets
      volumes:
        - name: secrets-dir # secrets will be stored here
          emptyDir:
            medium: Memory
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mobile-wiki-prod
  labels:
    team: iwing
  namespace: prod
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: mobile-wiki-prod.prod.${dc}.k8s.wikia.net
    http:
      paths:
      - backend:
          serviceName: mobile-wiki-prod
          servicePort: main
