k8s/k8s-deployment-descriptor-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # wrapped with double quote (") to prevent issues with special characters in version name
  name: "mobile-wiki-${env}-${version}"
  namespace: prod
  labels:
    app: mobile-wiki
    env: ${env}
    # wrapped with double quote (") to prevent issues with special characters in version name
    version: "${version}"
    status: active
    team: iwing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobile-wiki
      env: ${env}
      # wrapped with double quote (") to prevent issues with special characters in version name
      version: "${version}"
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: mobile-wiki
        env: ${env}
        # wrapped with double quote (") to prevent issues with special characters in version name
        version: "${version}"
        stage: mobile-wiki-sandbox
        team: iwing
    spec:
      serviceAccountName: k8s-pod
      containers:
        - name: mobile-wiki-${env}
          image: ${image}
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8001
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8001
            periodSeconds: 5
          resources:
            requests:
              cpu: 0.4
              memory: 1Gi
            limits:
              memory: 2Gi
          ports:
            - containerPort: 8007
            - containerPort: 8001
          command: ["sh", "-c", "source /var/lib/secrets/export.env && exec npm run fastboot-server"]
          volumeMounts:
            - name: secrets-dir
              readOnly: true
              mountPath: /var/lib/secrets
      volumes:
        - name: secrets-dir # secrets will be stored here
          emptyDir:
            medium: Memory
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mobile-wiki-${env}
  labels:
    team: iwing
  namespace: prod
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: mobile-wiki-${env}.prod.${dc}.k8s.wikia.net
      http:
        paths:
          - backend:
              serviceName: mobile-wiki-${env}
              servicePort: main
