k8s/k8s-descriptor-template-prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobile-wiki-prod
  name: mobile-wiki-prod
  namespace: prod
spec:
  ports:
  - protocol: TCP
    name: main
    port: 80
    targetPort: 8001
  selector:
    app: mobile-wiki-prod
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-wiki-prod
  namespace: prod
spec:
  replicas: 8
  selector:
    matchLabels:
      app: mobile-wiki-prod
  template:
    metadata:
      labels:
        app: mobile-wiki-prod
        stage: mobile-wiki-prod
    spec:
      serviceAccountName: k8s-pod
      containers:
      - name: mobile-wiki-prod
        image: ${image}
        livenessProbe:
          httpGet:
            path: /heartbeat
            port: 8001
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /heartbeat
            port: 8001
          periodSeconds: 5
        resources:
          requests:
            cpu: 0.4
            memory: 2Gi
          limits:
            memory: 3Gi
        ports:
        - containerPort: 8001
        command: ["sh", "-c", "source /var/lib/secrets/export.env && exec npm run fastboot-server"]
        volumeMounts:
        - name: secrets-dir
          readOnly: true
          mountPath: /var/lib/secrets
      volumes:
        - name: secrets-dir # secrets will be stored here
          emptyDir:
            medium: Memory
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mobile-wiki-prod
  namespace: prod
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: mobile-wiki-prod.prod.${dc}.k8s.wikia.net
    http:
      paths:
      - backend:
          serviceName: mobile-wiki-prod
          servicePort: main
