k8s/k8s-descriptor-template-staging.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobile-wiki-staging
  name: mobile-wiki-staging
  namespace: staging
spec:
  ports:
  - protocol: TCP
    name: main
    port: 80
    targetPort: 8001
  selector:
    app: mobile-wiki-staging
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mobile-wiki-staging
  namespace: staging
spec:
  replicas: 1 #TODO: adjust - tests on preview may kill single instance
  selector:
    matchLabels:
      app: mobile-wiki-staging
  template:
    metadata:
      labels:
        app: mobile-wiki-staging
    spec:
      containers:
      - name: mobile-wiki-staging
        image: ${image}
        livenessProbe:
          httpGet:
            path: /heartbeat
            port: 8001
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /heartbeat
            port: 8001
          periodSeconds: 5
        resources:
          requests:
            cpu: 0.4
            memory: 1.5Gi
          limits:
            memory: 3Gi
        ports:
        - containerPort: 8001
        command: ["sh", "-c", "source /var/lib/secrets/export.env && exec npm run fastboot-server"]
        volumeMounts:
        - name: secrets-dir
          readOnly: true
          mountPath: /var/lib/secrets
      volumes:
        - name: secrets-dir # secrets will be stored here
          emptyDir:
            medium: Memory
        - name: host-chef # the init container uses client certs to auth against vault
          hostPath:
            path: /etc/chef
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mobile-wiki-staging
  namespace: staging
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: mobile-wiki-staging.staging.sjc.k8s.wikia.net
    http:
      paths:
      - backend:
          serviceName: mobile-wiki-staging
          servicePort: main
