k8s/k8s-descriptor-template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobile-wiki-${env}
  name: mobile-wiki-${env}
  namespace: ${env}
spec:
  ports:
  - protocol: TCP
    name: main
    port: 80
    targetPort: 8001
  selector:
    app: mobile-wiki-${env}
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mobile-wiki-${env}
  namespace: ${env}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobile-wiki-${env}
  template:
    metadata:
      labels:
        app: mobile-wiki-${env}
    spec:
      containers:
      - name: mobile-wiki-${env}
        image: artifactory.wikia-inc.com/mobile-wiki/${image}
#        livenessProbe:
#          httpGet:
#            path: /healthcheck
#            port: 8081
#          initialDelaySeconds: 3
#          timeoutSeconds: 3
#          periodSeconds: 20
        resources:
         requests:
           cpu: 0.4
           memory: 300Mi
        ports:
        - containerPort: 7001
        - containerPort: 8001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mobile-wiki-${env}
  namespace: ${env}
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: mobile-wiki-${env}.${namespace}.${dc}.k8s.wikia.net
    http:
      paths:
      - backend:
          serviceName: mobile-wiki-${env}
          servicePort: main
