k8s/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobile-wiki
  name: mobile-wiki
  namespace: dev
spec:
  ports:
  - protocol: TCP
    name: main
    port: 80
    targetPort: 7001
#    targetPort: 8001 TODO: this should be on prod
  selector:
    app: mobile-wiki
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mobile-wiki
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobile-wiki
  template:
    metadata:
      labels:
        app: mobile-wiki
    spec:
      containers:
      - name: mobile-wiki
        image: artifactory.wikia-inc.com/test/mobile-wiki:0.0.6
#        livenessProbe:
#          httpGet:
#            path: /healthcheck
#            port: 8081
#          initialDelaySeconds: 3
#          timeoutSeconds: 3
#          periodSeconds: 20
        resources:
         requests:
           cpu: 0.4
           memory: 300Mi
        ports:
        - containerPort: 7001
        - containerPort: 8001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mobile-wiki
  namespace: dev
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: mobile-wiki.dev.poz-dev.k8s.wikia.net
    http:
      paths:
      - backend:
          serviceName: mobile-wiki
          servicePort: main
