k8s/k8s_descriptor-poz-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobile-wiki
  name: mobile-wiki
  namespace: dev
spec:
  ports:
  - port: 7001
    name: main
    protocol: TCP
    targetPort: 7001
  selector:
    app: mobile-wiki
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mobile-wiki
  namespace: dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mobile-wiki
    spec:
      containers:
      - name: mobile-wiki
        image: artifactory.wikia-inc.com/test/mobile-wiki:0.0.1
#        livenessProbe:
#          httpGet:
#            path: /healthcheck
#            port: 8081
#          initialDelaySeconds: 3
#          timeoutSeconds: 3
#          periodSeconds: 20
        resources:
         limits:
           memory: 300Mi
         requests:
           cpu: 500m
           memory: 300Mi
        ports:
        - containerPort: 7001
        - containerPort: 8001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mobile-wiki
  namespace: dev
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  #TODO Separate domains for different envs!
  - host: services-k8s.wikia-dev.pl
    http:
      paths:
      - path: /mobile-wiki
        backend:
          serviceName: mobile-wiki
          servicePort: main
